[package]
name = "sf"
version = "0.1.0"
authors = ["ky <pupupu0701@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
uuid = { version = "0.8", features = ["serde", "v4"] }
pbr = "1.0.3"
regex = "1.4.2"
